--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run unit tests
         working-directory: backend
-        run: python3 -m unittest discover tests
+        run: python3 -m unittest discover
 
       - name: SAM build and deploy
         working-directory: backend
